--- a/stories/components/message/Callout.stories.mdx
+++ b/stories/components/message/Callout.stories.mdx
@@ -39,6 +39,18 @@ import Icon from '@/components/elements/core/icon/Icon';
         type: "boolean"
       },
     },
+    paddings: {
+      description: "패딩",
+      table: {
+        type: {
+          summary: "Array",
+        },
+      },
+      control: {
+        type: "array",
+      },
+      defaultValue: null,
+    },
   }}
 />
 
@@ -55,6 +67,7 @@ export const Default = (args, { argTypes }) => ({
             v-if="showCallout"
             :type="type" :size="size"
             :full="full"
+            :paddings="paddings"
             :closable="closable"
             @closeCallout="showCallout = false"
         >
@@ -93,10 +106,13 @@ export const Default = (args, { argTypes }) => ({
                     <Callout type='information'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
-                    <Callout type='alert'>문구가 들어가는 자리입니다.</Callout>
+                    <Callout type='error'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
                     <Callout type='success'>문구가 들어가는 자리입니다.</Callout>
+                </div>
+                <div>
+                    <Callout type='notice'>문구가 들어가는 자리입니다.</Callout>
                 </div>
             </div>
             <div style="margin-bottom: 10px">
@@ -161,10 +177,13 @@ export const Default = (args, { argTypes }) => ({
                     <Callout type='information'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
-                    <Callout type='alert'>문구가 들어가는 자리입니다.</Callout>
+                    <Callout type='error'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
                     <Callout type='success'>문구가 들어가는 자리입니다.</Callout>
+                </div>
+                <div>
+                    <Callout type='notice'>문구가 들어가는 자리입니다.</Callout>
                 </div>
             </div>
             `,
@@ -262,14 +281,6 @@ export const Default = (args, { argTypes }) => ({
         },
         template: `
             <div>
-                <div>
-                    <Callout size="small" type="success">
-                        <template v-slot:icon>
-                            <Icon name="IconCheckRoundMediumLine" />
-                        </template>
-                        문구가 들어가는 자리입니다.
-                    </Callout>
-                </div>
                 <div>
                     <Callout size="medium">
                         <template v-slot:icon>
