feat: outlined -> outline

--- a/stories/components/dataDisplay/Table.stories.mdx
+++ b/stories/components/dataDisplay/Table.stories.mdx
@@ -109,7 +109,7 @@ import StyleCol from '@/components/layout/StyleCol';
                                                 </Typography>
                                             </li>
                                             <li>
-                                                <Button type="outlined" color="info" size="small" style="margin: 0 auto">신청하기</Button>
+                                                <Button type="outline" color="info" size="small" style="margin: 0 auto">신청하기</Button>
                                             </li>
                                         </ul>
                                     </template>
@@ -150,7 +150,7 @@ import StyleCol from '@/components/layout/StyleCol';
                                             </li>
                                             <li>
                                                 <Button
-                                                    type="outlined"
+                                                    type="outline"
                                                     color="info"
                                                     size="small"
                                                     style="margin: 0 auto"
