--- a/stories/components/dataDisplay/content/UserInformation.stories.mdx
+++ b/stories/components/dataDisplay/content/UserInformation.stories.mdx
@@ -71,7 +71,7 @@ export const Basic = (args, { argTypes }) => ({
                     <Chip
                         v-for="(item, index) in matchedItems"
                         :key="'chip' + index"
-                        type="outlined"
+                        type="outline"
                         color="primary"
                         size="small"
                     >
@@ -145,7 +145,7 @@ export const Basic = (args, { argTypes }) => ({
                                     <Chip
                                         v-for="(item, index) in matchedItems"
                                         :key="'chip' + index"
-                                        type="outlined"
+                                        type="outline"
                                         color="primary"
                                         size="small"
                                     >
