--- a/stories/components/dataEntry/Dropdown.stories.mdx
+++ b/stories/components/dataEntry/Dropdown.stories.mdx
@@ -140,7 +140,7 @@ export const Default = (args, { argTypes }) => ({
                             <TextField
                                 v-click-outside="closeList"
                                 :value.sync="inputValue"
-                                outlined
+                                outline
                                 full
                                 @click="showInputDropdown = !showInputDropdown"
                                 style="width: 230px"
