--- a/stories/components/dataEntry/FormGroup.stories.mdx
+++ b/stories/components/dataEntry/FormGroup.stories.mdx
@@ -14,8 +14,8 @@ export const Default = (args, { argTypes }) => ({
     template:
         `<div style="width:300px">
              <FormGroup>
-                 <TextField outlined placeholder="사이 사이 간격 12px"/>
-                 <Textarea type="outlined" />
+                 <TextField outline placeholder="사이 사이 간격 12px"/>
+                 <Textarea type="outline" />
              </FormGroup>
          </div>`,
 });
