--- a/stories/components/general/button/Button.stories.mdx
+++ b/stories/components/general/button/Button.stories.mdx
@@ -199,10 +199,10 @@ export const Default = (args, { argTypes }) => ({
                     <Button color="secondary" type="fill" size="medium" loading>Fill Gray</Button>
                   </div>
                   <div style="display: flex">
-                    <Button color="primary" type="outlined" size="medium" loading>Fill Primary</Button>
-                    <Button color="success" type="outlined" size="medium" loading>Fill Success</Button>
-                    <Button color="error" type="outlined" size="medium" loading>Fill Gray</Button>
-                    <Button color="secondary" type="outlined" size="medium" loading>Fill Gray</Button>
+                    <Button color="primary" type="outline" size="medium" loading>Fill Primary</Button>
+                    <Button color="success" type="outline" size="medium" loading>Fill Success</Button>
+                    <Button color="error" type="outline" size="medium" loading>Fill Gray</Button>
+                    <Button color="secondary" type="outline" size="medium" loading>Fill Gray</Button>
                   </div>
                 </div>
         `,
@@ -244,25 +244,25 @@ export const Default = (args, { argTypes }) => ({
                     </Button>
                   </div>
                   <div style="display: flex">
-                    <Button color="primary" type="outlined" size="medium" disabled>
+                    <Button color="primary" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
                             <Icon name="IconPlusMediumLine" color="primary" />
                         </template>
                         Fill Primary
                     </Button>
-                    <Button color="success" type="outlined" size="medium" disabled>
+                    <Button color="success" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
                             <Icon name="IconPlusMediumLine" color="success" />
                         </template>
                         Fill Success
                     </Button>
-                    <Button color="error" type="outlined" size="medium" disabled>
+                    <Button color="error" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
                             <Icon name="IconPlusMediumLine" color="error" />
                         </template>
                         Fill Gray
                     </Button>
-                    <Button color="secondary" type="outlined" size="medium" disabled>
+                    <Button color="secondary" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
                             <Icon name="IconPlusMediumLine" color="secondary" />
                         </template>
