--- a/stories/components/message/modal/FullscreenModal.stories.mdx
+++ b/stories/components/message/modal/FullscreenModal.stories.mdx
@@ -176,7 +176,7 @@ export const Default = (args, { argTypes }) => ({
                             title
                         </template>
                         <template v-slot:action>
-                            <Button size="small" type="outlined"  @click="show = false">초기화</Button>
+                            <Button size="small" type="outline"  @click="show = false">초기화</Button>
                         </template>
                         <template v-slot:content>
                             <div style="padding:16px">
@@ -256,7 +256,7 @@ export const Default = (args, { argTypes }) => ({
                             title
                         </template>
                         <template v-slot:action>
-                            <Button size="small" type="outlined" >초기화</Button>
+                            <Button size="small" type="outline" >초기화</Button>
                         </template>
                         <template v-slot:content>
                             <div style="padding:16px">
